Swagger - Update Api docs
